service.yaml
apiVersion: v1
kind: Service
metadata:
  name: symfony-app
spec:
  selector:
    app: symfony-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
